<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper2"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#1A94E6"
        android:baselineAligned="false"
        android:orientation="horizontal" 
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/app_name"
                android:textColor="#ffffff"
                android:textSize="25sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right" >

            <Button
                android:id="@+id/menuBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_btn" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/timeCounter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/init_time"
        android:textColor="#2222DD"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowColor="#CCFF00"
        android:shadowRadius="5"
        android:textSize="80sp" />

    <TextView
        android:id="@+id/workTaskView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/init_task"
        android:textColor="#2BD5D5"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/workTask"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/task_name_hint"
        android:maxLength="20"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_work_time" />

        <EditText
            android:id="@+id/workTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:inputType="number"
            android:maxLength="2"
            android:text="@string/default_work_time" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_rest_time" />

        <EditText
            android:id="@+id/restTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:inputType="number"
            android:maxLength="2"
            android:text="@string/default_rest_time" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/workbeginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_begin_work" 
            android:background="@drawable/work_begin"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/restbeginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_begin_rest" 
            android:background="@drawable/rest_begin"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/stopBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/button_stop" 
            android:background="@drawable/stop"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
    </LinearLayout>

</LinearLayout>